# ml-projects

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  run.bat  run.sh  setup.bat  setup.sh
.github/workflows/: ci.yml
algorithms/: __init__.py
algorithms/generator/: __init__.py  dataset.py  model.py
algorithms/gnn/: __init__.py  dataset.py  model.py
algorithms/graphvae/: __init__.py  dataset.py  model.py
algorithms/hyperbolic/: __init__.py  dataset.py  model.py
algorithms/physics_gnn/: __init__.py  dataset.py  model.py
backend/: app.py  config.py
backend/api/: generator_routes.py  gnn_routes.py  hyperbolic_routes.py  physics_gnn_routes.py  routes.py  spatial_routes.py  vae_routes.py  wl_routes.py
backend/core/: graph_utils.py  wl.py
core/: __init__.py  cli.py  registry.py
core/config/: __init__.py  loader.py  schema.py
core/datasets/: __init__.py  base.py
core/models/: __init__.py  base.py
core/training/: __init__.py  callbacks.py  metrics.py  trainer.py
demo/: index.html
demo/css/: style.css
demo/data/: examples.json
demo/js/: demo.js
docs/: index.html
docs/css/: style.css
docs/data/: examples.json
docs/js/: demo.js
experiments/configs/: karate_gat.yaml  karate_gcn.yaml  tree_hyperbolic.yaml
frontend/: index.html
scripts/: train_generator.py  train_gnn.py  train_vae.py
tests/: test_algorithms_gnn.py  test_algorithms_migrations.py  test_cli.py  test_core_framework.py  test_generator.py  test_gnn.py  test_graph_utils.py  test_graphvae.py  test_spatial.py  test_wl.py
(+38 files in other folders)
